--- a/net/webrtc/signalling/Cargo.toml
+++ b/net/webrtc/signalling/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name="gst-plugin-webrtc-signalling"
-version = "0.1.0"
-edition = "2018"
+name = "gst-plugin-webrtc-signalling"
+version = "0.9.0"
+edition = "2021"
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 license = "MPL-2.0"
 description = "GStreamer WebRTC sink signalling server"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+rust-version = "1.63"
 
 [dependencies]
 anyhow = "1"
@@ -23,4 +24,4 @@ uuid = { version = "1", features = ["v4"] }
 thiserror = "1"
 test-log = { version = "0.2", features = ["trace"], default-features = false }
 pin-project-lite = "0.2"
-gst_plugin_webrtc_protocol = { version = "0.1", path="../protocol", package = "gst-plugin-webrtc-signalling-protocol" }
+gst_plugin_webrtc_protocol = { version = "0.9", path="../protocol", package = "gst-plugin-webrtc-signalling-protocol" }
