--- a/net/webrtc/protocol/Cargo.toml
+++ b/net/webrtc/protocol/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name="webrtcsink-protocol"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 license = "MPL-2.0"
 description = "GStreamer WebRTC sink default protocol"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+rust-version = "1.63"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
