--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -27,7 +27,7 @@ async-tungstenite = { version = "0.17", features = ["async-std-runtime", "async-
 serde = "1"
 serde_json = "1"
 fastrand = "1.0"
-webrtcsink-protocol = { version = "0.1", path="protocol" }
+gst_plugin_webrtc_protocol = { version = "0.1", path="protocol", package = "gst-plugin-webrtc-signalling-protocol" }
 human_bytes = "0.3.1"
 
 [dev-dependencies]
