ci: make windows msrv job manual to reduce load on windows runners
https://gitlab.freedesktop.org/gstreamer/gstreamer-rs/-/issues/417

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -348,6 +348,7 @@ gst-build:
 test windows msrv:
   extends: '.msvc2019 build'
   image: $WINDOWS_RUST_MINIMUM_IMAGE
+  when: 'manual'
 
 test windows stable:
   extends: '.msvc2019 build'
