meson: Fix warning
Fixed following warning.

gst-plugins-rs| WARNING: You should add the boolean check kwarg to the run_command call.
gst-plugins-rs| It currently defaults to false,
gst-plugins-rs| but it will default to true in future releases of meson.
gst-plugins-rs| See also: https://github.com/mesonbuild/meson/issues/9300

--- a/meson.build
+++ b/meson.build
@@ -104,7 +104,7 @@ csound_dep = dependency('', required: false)
 if not csound_dep.found() and not csound_option.disabled()
   # if csound isn't distributed with pkg-config then user needs to define CSOUND_LIB_DIR with its location
 
-  res = run_command(python, '-c', 'import os; print(os.environ["CSOUND_LIB_DIR"])')
+  res = run_command(python, '-c', 'import os; print(os.environ["CSOUND_LIB_DIR"])', check: false)
   if res.returncode() == 0
     csound_libdir = res.stdout().strip()
     csound_dep = cc.find_library('csound64', dirs: csound_libdir, required: false)
