Rename rtpav1 plugin to just rtp
Fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/issues/243

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ members = [
     "net/onvif",
     "net/raptorq",
     "net/reqwest",
-    "net/rtpav1",
+    "net/rtp",
     "net/webrtc-http",
     "net/webrtc",
     "net/webrtc/protocol",
@@ -67,7 +67,7 @@ default-members = [
     "net/onvif",
     "net/raptorq",
     "net/reqwest",
-    "net/rtpav1",
+    "net/rtp",
     "net/webrtc-http",
     "net/webrtc",
     "net/webrtc/protocol",
