--- a/net/raptorq/Cargo.toml
+++ b/net/raptorq/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-raptorq"
 version = "0.9.0-alpha.1"
 authors = ["Tomasz Andrzejak <andreiltd@gmail.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-description = "Rust Raptorq FEC Plugin"
+description = "GStreamer RaptorQ FEC Plugin"
 license = "MPL-2.0"
 edition = "2021"
 rust-version = "1.63"
