--- a/video/closedcaption/Cargo.toml
+++ b/video/closedcaption/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Sebastian Dröge <sebastian@centricular.com>", "Jordan Petridis <jor
 license = "MPL-2.0"
 edition = "2021"
 rust-version = "1.63"
-description = "Rust Closed Caption Plugin"
+description = "GStreamer Rust Closed Caption Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 
 [dependencies]
