--- a/audio/audiofx/Cargo.toml
+++ b/audio/audiofx/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.9.0-alpha.1"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
-description = "Rust AudioFx Plugin"
+description = "GStreamer Rust Audio Effects Plugin"
 edition = "2021"
 rust-version = "1.63"
 
