--- a/generic/fmp4/Cargo.toml
+++ b/generic/fmp4/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-fmp4"
 version = "0.9.0-alpha.1"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 license = "MPL-2.0"
-description = "Fragmented MP4 Plugin"
+description = "GStreamer Fragmented MP4 Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 edition = "2021"
 rust-version = "1.63"
