--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-sodium"
 version = "0.9.0-alpha.1"
 authors = ["Jordan Petridis <jordan@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-description = "libsodium-based file encryption and decryption"
+description = "GStreamer plugin for libsodium-based file encryption and decryption"
 license = "MIT"
 edition = "2021"
 rust-version = "1.63"
