--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-threadshare"
 version = "0.9.0-alpha.1"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 license = "LGPL-2.1-or-later"
-description = "Threadshare Plugin"
+description = "GStreamer Threadshare Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 edition = "2021"
 rust-version = "1.63"
