--- a/net/hlssink3/Cargo.toml
+++ b/net/hlssink3/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-hlssink3"
-description = "HLS (HTTP Live Streaming) Plugin"
+description = "GStreamer HLS (HTTP Live Streaming) Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 version = "0.9.0-alpha.1"
 authors = ["Rafael Caricio <rafael@caricio.com>"]
