--- a/net/ndi/Cargo.toml
+++ b/net/ndi/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.9.0-alpha.1"
 authors = ["Ruben Gonzalez <rubenrua@teltek.es>", "Daniel Vilar <daniel.peiteado@teltek.es>", "Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
-description = "NewTek NDI Plugin"
+description = "GStreamer NewTek NDI Plugin"
 edition = "2021"
 rust-version = "1.63"
 
