--- a/net/onvif/Cargo.toml
+++ b/net/onvif/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.9.0-alpha.1"
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
-description = "Rust ONVIF Plugin"
+description = "GStreamer Rust ONVIF Plugin"
 edition = "2021"
 rust-version = "1.63"
 
