--- a/net/webrtchttp/Cargo.toml
+++ b/net/webrtchttp/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Taruntej Kanakamalla <taruntej@asymptotic.io"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
 edition = "2021"
-description = "Plugin for WebRTC HTTP protocols"
+description = "GStreamer WebRTC Plugin for WebRTC HTTP protocols (WHIP)"
 rust-version = "1.63"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
