--- a/utils/uriplaylistbin/Cargo.toml
+++ b/utils/uriplaylistbin/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.9.0-alpha.1"
 authors = ["Guillaume Desmottes <guillaume.desmottes@onestream.live>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
-edition = "2018"
-description = "Playlist Plugin"
+edition = "2021"
+description = "GStreamer Playlist Playback Plugin"
 rust-version = "1.63"
 
 [dependencies]
