--- a/video/ffv1/Cargo.toml
+++ b/video/ffv1/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.9.0-alpha.1"
 authors = ["Arun Raghavan <arun@asymptotic.io>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT OR Apache-2.0"
-description = "FFV1 Decoder Plugin"
+description = "GStreamer FFV1 Decoder Plugin"
 edition = "2021"
 rust-version = "1.63"
 
