--- a/video/hsv/Cargo.toml
+++ b/video/hsv/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.63"
-description = "HSV manipulation elements, written in Rust"
+description = "GStreamer plugin with HSV manipulation elements"
 
 [dependencies]
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
