--- a/net/rtp/Cargo.toml
+++ b/net/rtp/Cargo.toml
@@ -14,6 +14,7 @@ gst      = { package = "gstreamer",      git = "https://gitlab.freedesktop.org/g
 gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
 gst-rtp  = { package = "gstreamer-rtp",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"]}
 once_cell = "1.0"
+chrono = { version = "0.4", default-features = false }
 
 [dev-dependencies]
 gst-check = { package = "gstreamer-check",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
