Add new mux subdirectory for container formats
Contains the (incomplete) flavors FLV demuxer and the fragmented MP4
muxer for now.

Fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/issues/173

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,11 @@ members = [
     "audio/spotify",
 
     "generic/file",
-    "generic/fmp4",
     "generic/sodium",
     "generic/threadshare",
+
+    "mux/flavors",
+    "mux/fmp4",
 
     "net/aws",
     "net/hlssink3",
@@ -41,7 +43,6 @@ members = [
     "video/closedcaption",
     "video/dav1d",
     "video/ffv1",
-    "video/flavors",
     "video/gif",
     "video/gtk4",
     "video/hsv",
@@ -59,8 +60,9 @@ default-members = [
     "audio/claxon",
     "audio/lewton",
 
-    "generic/fmp4",
     "generic/threadshare",
+
+    "mux/fmp4",
 
     "net/aws",
     "net/hlssink3",
