--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-threadshare"
-version = "0.9.0-alpha.1"
+version = "0.9.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 license = "LGPL-2.1-or-later"
 description = "GStreamer Threadshare Plugin"
