--- a/version-helper/Cargo.toml
+++ b/version-helper/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-version-helper"
-version = "0.9.0-alpha.1"
+version = "0.7.4"
 authors = ["Sajeer Ahamed <ahamedsajeer.15.15@cse.mrt.ac.lk>",
            "Sebastian Dröge <sebastian@centricular.com>"]
 categories = ["development-tools"]
