--- a/video/cdg/Cargo.toml
+++ b/video/cdg/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-cdg"
-version = "0.9.0-alpha.1"
+version = "0.9.0"
 authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT OR Apache-2.0"
