--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-rav1e"
-version = "0.9.0-alpha.1"
+version = "0.9.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT OR Apache-2.0"
