--- a/net/rtp/Cargo.toml
+++ b/net/rtp/Cargo.toml
@@ -10,17 +10,17 @@ rust-version = "1.63"
 
 [dependencies]
 bitstream-io = "1.3"
-gst      = { package = "gstreamer",      git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
-gst-rtp  = { package = "gstreamer-rtp",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"]}
+gst      = { package = "gstreamer",      git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19", features = ["v1_20"] }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19", features = ["v1_20"] }
+gst-rtp  = { package = "gstreamer-rtp",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19", features = ["v1_20"]}
 once_cell = "1.0"
 chrono = { version = "0.4", default-features = false }
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
+gst-check = { package = "gstreamer-check",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19", features = ["v1_20"] }
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper = { version = "0.7", path = "../../version-helper" }
 
 [lib]
 name = "gstrsrtp"
