--- a/text/json/Cargo.toml
+++ b/text/json/Cargo.toml
@@ -15,6 +15,8 @@ serde_json = { version = "1.0", features = ["raw_value"] }
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.19"
+version = "0.19.1"
 package="gstreamer"
 features=["serde"]
 
@@ -24,10 +26,12 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { version = "0.7", path="../../version-helper" }
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.19"
+version = "0.19"
 package="gstreamer-check"
 
 [features]
