--- a/text/regex/Cargo.toml
+++ b/text/regex/Cargo.toml
@@ -14,6 +14,8 @@ regex = "1.5"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.19"
+version = "0.19.1"
 package="gstreamer"
 
 [lib]
@@ -22,10 +24,12 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { version = "0.7", path="../../version-helper" }
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.19"
+version = "0.19"
 package="gstreamer-check"
 
 [features]
