--- a/video/webp/Cargo.toml
+++ b/video/webp/Cargo.toml
@@ -14,10 +14,14 @@ libwebp-sys2 = { version = "0.1.2", features = ["demux", "0_5"] }
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.19"
+version = "0.19.1"
 package="gstreamer"
 
 [dependencies.gst-video]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.19"
+version = "0.19"
 package="gstreamer-video"
 
 [dev-dependencies]
@@ -25,6 +29,8 @@ pretty_assertions = "1"
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.19"
+version = "0.19"
 package="gstreamer-check"
 
 [lib]
@@ -33,7 +39,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { version = "0.7", path="../../version-helper" }
 
 [features]
 static = []
