ci: add integration stage and move documentation job to that
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/965>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,7 @@ stages:
   - "lint"
   - "test"
   - "extras"
+  - "integration"
 
 .debian:11:
   variables:
@@ -246,6 +247,7 @@ meson static:
 # Check that the gstreamer documentation keeps working
 documentation:
   image: $GSTREAMER_DOC_IMAGE
+  stage: 'integration'
   variables:
     MESON_ARGS: >
       -Ddoc=enabled
