uriplaylistbin: rely on new uridecodebin3 gapless logic
uridecodebin3 can now properly handle gapless switches so use that
instead of our own very complicated logic.

Fix #268
Fix #193

Depends on gst 1.23.90 as the plugin requires recent fixes to work properly.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1471>

--- a/meson.build
+++ b/meson.build
@@ -170,6 +170,7 @@ plugins = {
     'library': 'libgsturiplaylistbin',
     'examples': ['playlist'],
     'features': ['clap'],
+    'gst-version': '>=1.23.90',
   },
 
   'cdg': {'library': 'libgstcdg'},
@@ -396,6 +397,18 @@ foreach plugin_name, details: plugins
           break
         endif
       endforeach
+    endif
+    if details.has_key('gst-version')
+      # Check if we have the required GStreamer version
+      gst_version = details.get('gst-version', '')
+      dep = dependency('gstreamer-1.0', required: false, version: gst_version)
+      if not dep.found()
+        opt = get_option(plugin_name)
+        if opt.enabled()
+          error('Required GStreamer version not found to build ' + plugin_name)
+        endif
+        plugin_deps_found = false
+      endif
     endif
     if plugin_deps_found
       packages += f'gst-plugin-@plugin_name@'
